fixed image perf, fixed alignments

--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -240,6 +240,16 @@
   display: inline-block;
   margin-right: 5px;
   border-radius: 5px;
-  
 }
 
+.smooth-image{
+  transition: opacity 1s;
+}
+
+.image-visible {
+  opacity: 1;
+}
+
+.image-hidden {
+  opacity: 0;
+}
